--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,3 +17,18 @@ jobs:
             composer install
             npm install
             npm run production
+            
+  run-tests:
+    name: Run PHPUnit tests
+    runs-on: ubuntu-latest
+    container:
+      image: composer:latest
+      volumes:
+        - ${{ github.workspace }}:/app
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Running composer install
+        run: composer install
+      - name: Running phpunit
+        run: ./vendor/bin/phpunit tests
